--- a/P4/S10/package.json
+++ b/P4/S10/package.json
@@ -24,6 +24,7 @@
         }
     },
     "devDependencies": {
-        "electron": "^12.0.6"
+        "electron": "^12.0.9",
+        "electron-builder": "^22.10.5"
     }
 }
