--- a/P4/chat/package.json
+++ b/P4/chat/package.json
@@ -1,8 +1,11 @@
 {
-    "name": "mi-electron-app",
+    "name": "chat-server",
     "description": "Estas es mi primera aplicación de escritorio en Electron",
     "version": "0.1.0",
     "main": "main.js",
+    "author": {
+        "name": "Manuel"
+    },
     "scripts": {
         "start": "electron ."
     },
