--- a/P4/chat/package.json
+++ b/P4/chat/package.json
@@ -11,9 +11,14 @@
     },
     "dependencies": {
         "colors": "^1.4.0",
+        "dist": "^0.1.2",
         "electron": "^13.0.1",
         "express": "^4.17.1",
         "ip": "^1.1.5",
+        "qrcode": "^1.4.4",
         "socket.io": "^4.1.2"
+    },
+    "devDependencies": {
+        "electron-builder": "^22.10.5"
     }
 }
